# chefai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml
app/: config.py  db.py  decrement.py  enums.py  generation.py  jobs.py  llm_client.py  main.py  models.py  panels.py  prompt_builder.py  response_parser.py  schemas.py  seed.py
app/locales/: fr.json
app/routers/: cookbook.py  generate.py  home.py  jobs.py  pantry.py  plan.py  settings.py  shopping.py
app/static/: manifest.webmanifest
app/static/js/: app.js
app/templates/: _nav.html  base.html  cook.html  cook_mode.html  cookbook.html  decrement_review.html  home.html  pantry.html  plan_detail.html  plan_proposals.html  recipe_detail.html  settings.html  shop_mode.html  shopping.html
app/templates/partials/: _form_cook_have.html  _form_cook_shop.html  _form_plan.html  _job_status.html  _pantry_item.html  _parse_error.html  _plan_form.html  _plan_proposals_cards.html  _prompt_result.html  _recipe_cards.html  (+7 more)
tests/: conftest.py  test_app_boot.py  test_config.py  test_cookbook_routes.py  test_db.py  test_decrement.py  test_enums.py  test_generate_routes.py  test_generation.py  test_home_routes.py  test_i18n.py  test_jobs.py  test_jobs_routes.py  test_llm_client.py  test_models.py  test_models_generation_job.py  test_pantry_routes.py  test_plan_routes.py  test_prompt_builder.py  test_response_parser.py  test_schemas.py  test_seed.py  test_settings_routes.py  test_shopping_routes.py
(+4 files in other folders)
